--- a/hm.tex
+++ b/hm.tex
@@ -2184,7 +2184,7 @@ This means that the lagrangian \eqref{eq:centralpot} has three constants of moti
 
 For convenience, let's rewrite the equations of motion for \eqref{eq:centralpot} as
 \begin{equation}
-    m\ddot \bx = - U'(r)\frac{\bx}{x}, \quad x = \|\bx\|, \quad U'(x)=\frac{\d U(x)}{\d x}.
+    m\ddot \bx = - U'(x)\frac{\bx}{x}, \quad x = \|\bx\|, \quad U'(x)=\frac{\d U(x)}{\d x}.
 \end{equation}
 
 \begin{theorem}
