--- a/hm.bib
+++ b/hm.bib
@@ -225,7 +225,7 @@ Bibliography}
   author = {Seri, Marcello},
   title  = {Analysis on Manifolds},
   year   = 2020,
-  note   = {Unpublished lecture notes},
+  note   = {Unpublished lecture notes, version 0.10},
   url    = {https://github.com/mseri/AoM/releases}
 }
 
