--- a/hm.bib
+++ b/hm.bib
@@ -188,6 +188,17 @@ Bibliography}
   year     = {2004}
 }
 
+@incollection{Celletti_2009,
+  doi       = {10.1007/978-0-387-30440-3_397},
+  url       = {https://doi.org/10.1007%2F978-0-387-30440-3_397},
+  year      = 2009,
+  publisher = {Springer New York},
+  pages     = {6673--6686},
+  author    = {Alessandra Celletti},
+  title     = {Perturbation {TheoryPerturbation} theory in Celestial {MechanicsCelestial} mechanics},
+  booktitle = {Encyclopedia of Complexity and Systems Science}
+}
+
 @book{goldstein2013classical,
   title     = {Classical Mechanics},
   author    = {Goldstein, H. and Poole, C.P. and Safko, J.},
