--- a/hm.tex
+++ b/hm.tex
@@ -145,7 +145,7 @@ linktoc=page}
 \thispagestyle{empty}
 \null\vfill
 \begin{center}
-    Version 1.3.9\\
+    Version 1.3.10\\
     \today
 \end{center}
 \vfill
@@ -2782,8 +2782,8 @@ The crucial point of this whole construction lies in the new shape taken by the 
     \begin{equation}\label{eq:Hamsys}
         \left\lbrace
         \begin{aligned}
-            \dot q^i &= \frac{\partial H}{\partial \dot p_i}\\
-            \dot p_i &= -\frac{\partial H}{\partial \dot q^i}
+            \dot q^i &= \frac{\partial H}{\partial p_i}\\
+            \dot p_i &= -\frac{\partial H}{\partial q^i}
         \end{aligned}
         \right. \qquad i=1,\ldots,n,
     \end{equation}
