Update GH Action and release small fix
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -145,7 +145,7 @@ linktoc=page}
 \thispagestyle{empty}
 \null\vfill
 \begin{center}
-    Version 1.3.10\\
+    Version 1.3.11\\
     \today
 \end{center}
 \vfill
@@ -181,6 +181,8 @@ We will then move to study action--angle coordinates and integrability, and fina
 On the latter, we will only briefly discuss resonances and mostly focus on KAM theory and the Nekhoroshev theorem.
 
 Topics that I intend to add over time include: contact mechanics, non-holonomic mechanics/sub-riemannian geometry, numerical methods, rigid bodies, mathematical billiards, integrability via Lax pairs...
+
+A number of extra references covering some of the topics mentioned above is \href{https://www.mseri.me/links-from-hm/}{collected on my blog (you can go there by clicking here)}.
 
 Last year there were two non-standard notational conventions that I decided to adopt from \cite{book:arnold}: $(\cdot,\cdot)$ denoted the inner products, also in Euclidean space when it corresponds to the standard scalar product, and $[\cdot,\cdot]$ the exterior product, also in $\R^3$ where I could have instead used the cross product. \emph{I have revisited my choice here and this year I will try to update the notation to something closer to my analysis on manifolds notes \cite{lectures:aom:seri}.}
 
@@ -5815,7 +5817,7 @@ In the \emph{generic} case of $n$ distinct roots of the polynomial $P_n$, we hav
 
 More precisely, one can prove the following.
 \begin{theorem}
-    Let $H(x) = \frac12(Ax,x)$ be a quadratic hamiltonian in $\R^{2n}$
+    Let $H(x) = \frac12\lag Ax,x \rag$ be a quadratic hamiltonian in $\R^{2n}$
     such that the characteristic polynomial has the form
     \begin{equation}
         \det(A-\lambda J) = \prod_{i=1}^n(\lambda + \omega_i^2), \quad \omega_1, \ldots, \omega_n \in \R_+, \omega_i\neq\omega_j.
