--- a/hm.tex
+++ b/hm.tex
@@ -145,7 +145,7 @@ linktoc=page}
 \thispagestyle{empty}
 \null\vfill
 \begin{center}
-    Version 1.3.11\\
+    Version 1.3.12\\
     \today
 \end{center}
 \vfill
@@ -599,6 +599,15 @@ If $(t, \bx) \in \R\times \R^3$ is an element of the ``standard'' galilean space
     \item uniform motions with velocity $\bm{v}\in\R^3$: $\widetilde t = t$, $\widetilde{\bx} = \bx + \bm{v} t$.
 \end{enumerate}
 Then, the galilean principle of relativity says that the lagrangian of a closed mechanical system is invariant, modulo the sum of total derivatives, with respect to the galilean transformations.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.85\linewidth]{coni-mathyear-21-21.jpg}
+    \caption{A graphical introduction to Newton's laws of motion,
+    courtesy of \href{https://web.archive.org/web/20210602092955/https://twitter.com/Coni777/status/1399953219997032448}{Constanza Rojas-Molina}.
+    If you feel creative, consider contributing to the
+    \href{http://crojasmolina.com/illustration/the-mathyear-challenge/list-of-prompts-for-mathyear/}{\#mathyear} challenge.}
+\end{figure}
 
 We will now see how we can derive Newton's laws from Hamilton's principle as a consequence of the galilean principle of relativity. For an alternative discussion on this topic see \cite[Chapters 1.1 and 1.2]{book:arnold}.
 
