Thanks again to Coni for the artwork
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -190,6 +190,8 @@ Please don't be afraid to send me comments to improve the course or the text and
 
 I am extremely grateful to Riccardo Bonetto, Anouk Pelzer, Robbert Scholtens and Albert \v{S}ilvans for their careful reading of the notes and their useful comments and corrections.
 
+Last but not least, I owe a huge debt of gratitude to \href{https://crojasmolina.com}{Constanza Rojas-Molina}, who kindly allowed me to use some of her beautiful artworks in the lecture notes.
+
 \chapter{Classical mechanics, from Newton to Lagrange and back}
 
 In this chapter we will briefly review some basic concepts of classical mechanics, in particular we will only briefly discuss variational calculus and Newtonian mechanics.
@@ -2293,6 +2295,15 @@ In the plane, this translates into being confined into an annular region as depi
 \end{exercise}
 
 \subsection{Kepler's problem}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.85\linewidth]{coni-mathyear-21-29.jpg}
+    \caption{A graphical introduction to Celestial Mechanics,
+    courtesy of \href{https://web.archive.org/web/20210728151339/https://twitter.com/Coni777/status/1420395932290535432}{Constanza Rojas-Molina}.
+    If you feel creative, consider contributing to the
+    \href{http://crojasmolina.com/illustration/the-mathyear-challenge/list-of-prompts-for-mathyear/}{\#mathyear} challenge.}
+\end{figure}
 
 Let's go back to Example~\ref{ex:kepler2}, and replace $U$ with the Newtonian gravitational potential $k/\|\bx\|$ (see Examples~\ref{ex:Kepler0} and \ref{ex:kepler1}).
 The effective potential \eqref{eq:effpotcp}, in this case is
