--- a/hm.tex
+++ b/hm.tex
@@ -1,12 +1,6 @@
 \documentclass[english,fontsize=11pt,paper=a5,oneside]{scrbook}
-%\usepackage{fourier}
-%\usepackage{lmodern} % Improvement over cmtt
-%\usepackage{cmbright}
-%\usepackage{sansmathfonts}
 
-%\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
+\usepackage{textcomp,microtype, ifluatex, ifxetex}
 \renewcommand*\familydefault{\sfdefault}
 
 \ifx\ifxetex\ifluatex\else % if lua- or xelatex http://tex.stackexchange.com/a/140164/1913
