--- a/hm.tex
+++ b/hm.tex
@@ -227,7 +227,7 @@ We call \emph{acceleration}, the rate of change of the velocity, i.e., the secon
 \end{equation}
 
 \begin{tcolorbox}
-The mechanics of the particle is encoded in \emph{Newton's second law of motion}, which states that there exist \emph{frames of reference} (i.e systems of coordinates) in which the motion of the particle is described by a differential equation involving the forces $\bm{F}$ acting on the point particle, its mass $m$ and its acceleration as follows
+The mechanics of the particle is encoded in \emph{Newton's second law of motion}, which states that there exist \emph{frames of reference} (i.e systems of coordinates) in which the motion of the particle is described by a differential equation involving the forces $\bm{F}$ acting on the point particle, its mass $m$ and its acceleration as follows\footnote{This is not completely true, Newton was already talking about momentum, which \href{https://web.archive.org/web/20211201082909/https://bigthink.com/starts-with-a-bang/most-important-equation-physics/}{makes a deep difference} but would bring us way off course right now.}
 \begin{equation}\label{eq:newton}
     \bm F = m \ddot{\bx}.
 \end{equation}
