--- a/hm.tex
+++ b/hm.tex
@@ -196,7 +196,7 @@ Last year there were two non-standard notational conventions that I decided to a
 
 Please don't be afraid to send me comments to improve the course or the text and to fix the many typos that will surely be in this first draft. They will be very appreciated.
 
-I am extremely grateful to Riccardo Bonetto, Anouk Pelzer, Robbert Scholtens and Albert \v{S}ilvans for their careful reading of the notes and their useful comments and corrections.
+I am extremely grateful to Riccardo Bonetto, Anouk Pelzer, Robbert Scholtens, Albert \v{S}ilvans and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
 
 Last but not least, I owe a huge debt of gratitude to \href{https://crojasmolina.com}{Constanza Rojas-Molina}, who kindly allowed me to use some of her beautiful artworks in the lecture notes.
 
@@ -1603,7 +1603,7 @@ Let's now look at more and less immediate consequences of our discovery, startin
 
 Consider a system of $N$ particles with lagrangian \eqref{eq:mechlag},
 \begin{equation}
-    L = \frac21 \sum_{k=1}^N m_k \dot \bx_k^2 - U(\bx_1, \ldots, \bx_N),
+    L = \frac12 \sum_{k=1}^N m_k \dot \bx_k^2 - U(\bx_1, \ldots, \bx_N),
 \end{equation}
 which is invariant with respect to translations
 \begin{equation}
